# FSI_HiMod

./: .gitignore  README.md  activate_modules.sh
cmake_project/: CMakeLists.txt  SampleCMakeLists.txt  (+4 more)
cmake_project/lib/lifev/lifev/himod/: Astyle  CMakeLists.txt
cmake_project/lib/lifev/lifev/himod/basis/: Basis1DAbstract.hpp  Basis2DAbstract.hpp  BasisAbstract.hpp  Bessel.cpp  Bessel.hpp  CMakeLists.txt  ChebyshevLinearShift.cpp  ChebyshevLinearShift.hpp  ChebyshevQuadShift.cpp  ChebyshevQuadShift.hpp  ChebyshevQuadShiftNatural.cpp  ChebyshevQuadShiftNatural.hpp  ChebyshevQuadraticShift.cpp  ChebyshevQuadraticShift.hpp  ChebyshevQuadraticShiftNatural.cpp  ChebyshevQuadraticShiftNatural.hpp  EducatedBasis2DFunctorImplemented.hpp  EducatedBasisAbstract.hpp  EducatedBasisD.cpp  EducatedBasisD.hpp  EducatedBasisDD.cpp  EducatedBasisDD.hpp  EducatedBasisDR.cpp  EducatedBasisDR.hpp  EducatedBasisFunctorAbstract.hpp  EducatedBasisFunctorImplemented.hpp  EducatedBasisN.cpp  EducatedBasisN.hpp  EducatedBasisNN.cpp  EducatedBasisNN.hpp  EducatedBasisR.cpp  EducatedBasisR.hpp  EducatedBasisRR.cpp  EducatedBasisRR.hpp  FakeBasis.cpp  FakeBasis.hpp  Robert.cpp  Robert.hpp  UneducatedBasisAbstract.hpp  Zernike.cpp  (+3 more)
cmake_project/lib/lifev/lifev/himod/cmake/: Dependencies.cmake
cmake_project/lib/lifev/lifev/himod/examples/: CMakeLists.txt  CfrDOF.gplot
cmake_project/lib/lifev/lifev/himod/examples/test_Camini_FEM_rect/: CMakeLists.txt  data  main.cpp
cmake_project/lib/lifev/lifev/himod/examples/test_DOF_FEM_rect/: CMakeLists.txt  LognormL2  data  main.cpp
cmake_project/lib/lifev/lifev/himod/examples/test_conv_FEM_rect/: CMakeLists.txt  main.cpp
cmake_project/lib/lifev/lifev/himod/examples/test_conv_rect/: .gnuplot  CMakeLists.txt  CfrDOF.gplot  CfrTIME.gplot  LognormL2  data  graph  main.cpp
cmake_project/lib/lifev/lifev/himod/examples/test_show_rect/: CMakeLists.txt  SolverParamList.xml  data  main.cpp
cmake_project/lib/lifev/lifev/himod/modalbasis/: CMakeLists.txt  HMAaddNSAssembler.hpp  HMAaddNSAssemblerAxialDependent.hpp  HMAaddNSAssemblerPipe.hpp  HMAbcHandler.hpp  HMAbcHandlerPipe.hpp  HMAinterpolation.hpp  HMAinterpolationPipe.hpp  HMAutilities.hpp  HMAutilitiesPipe.hpp  HiModAssembler.hpp  HiModAssemblerCircular.hpp  HiModAssemblerRectangular.hpp  ModalSpaceAbstract.hpp  ModalSpaceCircular.cpp  ModalSpaceCircular.hpp  ModalSpaceRectangular.cpp  ModalSpaceRectangular.hpp  NSHiModAssembler.hpp  NSHiModAssemblerCircular.hpp  NSHiModAssemblerPipe.hpp  NSModalSpaceAbstract.hpp  NSModalSpaceCircular.cpp  NSModalSpaceCircular.hpp  NSModalSpacePipe.cpp  NSModalSpacePipe.hpp  Projector.hpp
cmake_project/lib/lifev/lifev/himod/testsuite/: CMakeLists.txt
cmake_project/lib/lifev/lifev/himod/testsuite/1circ_ADR/: CMakeLists.txt  data  main.cpp
cmake_project/lib/lifev/lifev/himod/testsuite/1rect_ADR/: CMakeLists.txt  data  main.cpp
cmake_project/lib/lifev/lifev/himod/testsuite/2circ_check_basis/: main.cpp
cmake_project/lib/lifev/lifev/himod/testsuite/2rect_check_basis/: CMakeLists.txt  main.cpp
cmake_project/lib/lifev/lifev/himod/testsuite/3circ_cfr_rhs/: CMakeLists.txt  data  main.cpp
cmake_project/lib/lifev/lifev/himod/testsuite/3rect_cfr_rhs/: CMakeLists.txt  data  main.cpp
cmake_project/lib/lifev/lifev/himod/testsuite/4rect_generaltest/: CMakeLists.txt  data  main.cpp
cmake_project/lib/lifev/lifev/himod/testsuite/5rect_generalconvergencetest/: CMakeLists.txt  data  graph.gplot  main.cpp
cmake_project/lib/lifev/lifev/himod/testsuite/6rect_nonconst/: CMakeLists.txt  data  main.cpp
cmake_project/lib/lifev/lifev/himod/testsuite/7circ_Stokes/: data  main.cpp
cmake_project/lib/lifev/lifev/himod/testsuite/7circ_Stokes_Uneducated/: PointsCoord.txt  TetraLabels.txt  data  main.cpp
cmake_project/lib/lifev/lifev/himod/testsuite/7circ_Stokes_cone/: besselRoots.txt  data  main.cpp
cmake_project/lib/lifev/lifev/himod/testsuite/7pipe_Stokes/: data  main.cpp
cmake_project/lib/lifev/lifev/himod/testsuite/8circ_UnsteadyStokes/: CMakeLists.txt  data  main.cpp
cmake_project/lib/lifev/lifev/himod/testsuite/8circ_UnsteadyStokes_PressureGrad/: data  main.cpp
cmake_project/lib/lifev/lifev/himod/testsuite/8circ_UnsteadyStokes_StartingFlow/: data  main.cpp
cmake_project/lib/lifev/lifev/himod/testsuite/8circ_UnsteadyStokes_cone/: data  main.cpp
cmake_project/lib/lifev/lifev/himod/testsuite/8pipe_UnsteadyStokes/: CMakeLists.txt  data  main.cpp
cmake_project/lib/lifev/lifev/himod/testsuite/9circ_NavierStokes/: data  main.cpp
cmake_project/lib/lifev/lifev/himod/testsuite/9circ_NavierStokes_Uneducated/: data  main.cpp
cmake_project/lib/lifev/lifev/himod/tools/: BCstructure.hpp  CMakeLists.txt  HiModExporterEnsight.cpp  HiModExporterEnsight.hpp  HiModExporterParaview.cpp  HiModExporterParaview.hpp  HiModExporterVtk.cpp  HiModExporterVtk.hpp  HiModPostProcessor.hpp  Poiseuille.hpp  RealGeoData.hpp  ReferenceMap.cpp  ReferenceMap.hpp  utilityFunctions.hpp  utilityFunctionsCone.hpp  utilityFunctionsPipe.hpp  utilityNSFunctions.hpp  utilityUnsteadyFunctions.hpp  utilityUnsteadyPressureFunctions.hpp  utilityUnsteadyPressureFunctionsCone.hpp
cmake_project/lib/lifev/lifev/himod/util/: CMakeLists.txt  CaseTest.cpp  CaseTest.hpp  CaseTestStruct.hpp  CaseTestStructCirc.hpp  CheckModalBasis1D.cpp  CheckModalBasis1D.hpp  CheckModalBasis2D.cpp  CheckModalBasis2D.hpp  ConvergenceErrorHandler.cpp  ConvergenceErrorHandler.hpp  GeneralConvergenceTest.cpp  GeneralConvergenceTest.hpp  GeneralTest.cpp  GeneralTest.hpp
cmake_project/src/: CMakeLists.txt  FEDefinitions.cpp  FSIData.cpp  FSISolver.cpp  NSModalSpaceCircular.cpp  ReferenceMap.cpp  main.cpp  test.cpp
project/lib/lifev/lifev/himod/modalbasis/: CMakeLists.txt  HMAaddNSAssemblerPipe.hpp  HMAbcHandlerPipe.hpp  HMAutilitiesPipe.hpp  HiModAssembler.hpp  HiModAssemblerCircular.hpp  ModalSpaceCircular.hpp  ModalSpaceRectangular.cpp  ModalSpaceRectangular.hpp  NSHiModAssembler.hpp  NSHiModAssemblerCircular.hpp  NSHiModAssemblerPipe.hpp  NSModalSpaceAbstract.hpp  NSModalSpaceCircular.cpp  NSModalSpaceCircular.hpp  Projector.hpp
(+750 files in other folders)
